# octa-seed

./: CMakeLists.txt  README.md
Assignments/: CMakeLists.txt
Assignments/AXApplesRenderer/: CMakeLists.txt
Assignments/AXApplesRenderer/shaders/: Apples.hlsl
Assignments/AXApplesRenderer/src/: ApplesRenderer.cpp
Assignments/AXFruitsGenerator/: CMakeLists.txt
Assignments/AXFruitsGenerator/shaders/: Fruits.hlsl
Assignments/AXFruitsGenerator/src/: FruitsGenerator.cpp
Assignments/AXLemonsRenderer/: CMakeLists.txt
Assignments/AXLemonsRenderer/shaders/: Lemons.hlsl
Assignments/AXLemonsRenderer/src/: LemonsRenderer.cpp
Assignments/AXOctasphereWithInterLOD/: CMakeLists.txt
Assignments/AXOctasphereWithInterLOD/shaders/: Octaspheres.hlsl
Assignments/AXOctasphereWithInterLOD/src/: OctasphereRenderer.cpp  OctaspheresRenderer.cpp
Assignments/AXOctasphereWithIntraLOD/: CMakeLists.txt
Assignments/AXOctasphereWithIntraLOD/shaders/: Octasphere.hlsl
Assignments/AXOctasphereWithIntraLOD/src/: OctasphereRenderer.cpp
Assignments/AXPearsRenderer/: CMakeLists.txt
Assignments/AXPearsRenderer/shaders/: Pears.hlsl
Assignments/AXPearsRenderer/src/: PearsRenderer.cpp
Assignments/AXSimpleAppleWithIntraLOD/: CMakeLists.txt
Assignments/AXSimpleAppleWithIntraLOD/shaders/: Apple.hlsl
Assignments/AXSimpleAppleWithIntraLOD/src/: AppleRenderer.cpp
Assignments/AXSimpleOctasphereWithBezierCurves/: CMakeLists.txt
Assignments/AXSimpleOctasphereWithBezierCurves/shaders/: Octasphere.hlsl
Assignments/AXSimpleOctasphereWithBezierCurves/src/: OctasphereRenderer.cpp
Assignments/AXSimpleStrawberryWithIntraLOD/: CMakeLists.txt  shader-0.hlsl  shader-1.hlsl
Assignments/AXSimpleStrawberryWithIntraLOD/shaders/: Strawberry.hlsl
Assignments/AXSimpleStrawberryWithIntraLOD/src/: StrawberryRenderer.cpp
Assignments/AXStrawberriesRenderer/: CMakeLists.txt
Assignments/AXStrawberriesRenderer/shaders/: Strawberries.hlsl
Assignments/AXStrawberriesRenderer/src/: StrawberriesRenderer.cpp
Assignments/AXThreeOctaspheres/: CMakeLists.txt
Assignments/AXThreeOctaspheres/shaders/: Octaspheres.hlsl
Assignments/AXThreeOctaspheres/src/: OctaspheresRenderer.cpp
Assignments/AXTwoOctaspheres/: CMakeLists.txt
Assignments/AXTwoOctaspheres/shaders/: Octaspheres.hlsl
Assignments/AXTwoOctaspheres/src/: OctaspheresRenderer.cpp
Assignments/AXUVSphereWithInterLOD/: CMakeLists.txt
Assignments/AXUVSphereWithInterLOD/src/: SphereRenderer.cpp
Assignments/AXUVSphereWithIntraLOD/: CMakeLists.txt
Assignments/AXUVSphereWithIntraLOD/shaders/: Sphere.hlsl
Assignments/AXUVSphereWithIntraLOD/src/: SphereRenderer.cpp
Assignments/UVSphereWithInterLOD/: CMakeLists.txt
Assignments/UVSphereWithInterLOD/shaders/: UVSphereWithInterLOD.hlsl
Assignments/UVSphereWithInterLOD/src/: UVSphereWithInterLODApp.cpp
Tutorials/: CMakeLists.txt
Tutorials/TXBasicFrameworkForModernGeometryPipeline/: CMakeLists.txt
Tutorials/TXBasicFrameworkForModernGeometryPipeline/src/: BasicFrameworkForModernGeometryPipeline.cpp
Tutorials/TXEllipseMultiThreaded/: CMakeLists.txt
Tutorials/TXEllipseMultiThreaded/shaders/: Ellipse.hlsl
Tutorials/TXEllipseMultiThreaded/src/: EllipseRenderer.cpp
Tutorials/TXNaiveEllipseWithMeshShaderWithMultipleThreads/: CMakeLists.txt
Tutorials/TXNaiveEllipseWithMeshShaderWithMultipleThreads/src/: EllipseRenderer.cpp  NaiveEllipseWithMeshShaderWithMultipleThreads.cpp
Tutorials/TXNaiveSphereWithMeshShaderWithMultipleThreads/: CMakeLists.txt
Tutorials/TXNaiveSphereWithMeshShaderWithMultipleThreads/shaders/: NaiveSphere.hlsl
Tutorials/TXNaiveSphereWithMeshShaderWithMultipleThreads/src/: NaiveSphereWithMeshShaderWithMultipleThreads.cpp  SphereRenderer.cpp
Tutorials/TXNaiveTriangleWithMeshShader/: CMakeLists.txt
Tutorials/TXNaiveTriangleWithMeshShader/src/: NaiveTriangleWithMeshShader.cpp
Tutorials/TXNaiveTriangleWithMeshShaderWithASingleThread/: CMakeLists.txt
Tutorials/TXNaiveTriangleWithMeshShaderWithASingleThread/src/: NaiveTriangleWithMeshShader.cpp  TriangleRenderer.cpp
Tutorials/TXNaiveTriangleWithMeshShaderWithMultipleThreads/: CMakeLists.txt
Tutorials/TXNaiveTriangleWithMeshShaderWithMultipleThreads/shaders/: NaiveTriangle.hlsl  Triangle.hlsl
Tutorials/TXNaiveTriangleWithMeshShaderWithMultipleThreads/src/: NaiveTriangleWithMeshShader.cpp  NaiveTriangleWithMeshShaderWithMultipleThreads.cpp  TriangleRenderer.cpp
Tutorials/TXOctahedronMultiThreaded/: CMakeLists.txt
Tutorials/TXOctahedronMultiThreaded/shaders/: Octahedron.hlsl
Tutorials/TXOctahedronMultiThreaded/src/: OctahedronRenderer.cpp
Tutorials/TXOctahedronMultiThreadedImproved/: CMakeLists.txt
Tutorials/TXOctahedronMultiThreadedImproved/src/: OctahedronRenderer.cpp
Tutorials/TXRectangleMultiThreaded/: CMakeLists.txt
Tutorials/TXRectangleMultiThreaded/shaders/: Rectangle.hlsl
Tutorials/TXSphereMultiThreaded/: CMakeLists.txt
Tutorials/TXSubdividedOctahedronMultiThreaded/: CMakeLists.txt
Tutorials/TXTriangleMultiThreaded/: CMakeLists.txt
Tutorials/TXTriangleSingleThreaded/: CMakeLists.txt
Tutorials/TXTwoTrianglesMultiThreaded/: CMakeLists.txt
gimslib/include/gimslib/d3d/: DX12App.hpp  (+3 more)
(+18 files in other folders)
