add_subdirectory(./AXUVSphereWithIntraLOD)
set_target_properties (AXUVSphereWithIntraLOD PROPERTIES FOLDER assignments)

add_subdirectory(./AXOctasphereWithIntraLOD)
set_target_properties (AXOctasphereWithIntraLOD PROPERTIES FOLDER assignments)

add_subdirectory(./AXOctasphereWithInterLOD)
set_target_properties (AXOctasphereWithInterLOD PROPERTIES FOLDER assignments)

add_subdirectory(./AXThreeOctaspheres)
set_target_properties (AXThreeOctaspheres PROPERTIES FOLDER assignments)

