add_subdirectory(./AXUVSphereWithIntraLOD)
set_target_properties (AXUVSphereWithIntraLOD PROPERTIES FOLDER assignments)

add_subdirectory(./AXOctasphereWithIntraLOD)
set_target_properties (AXOctasphereWithIntraLOD PROPERTIES FOLDER assignments)

add_subdirectory(./AXTwoOctaspheres)
set_target_properties (AXTwoOctaspheres PROPERTIES FOLDER assignments)

add_subdirectory(./AXOctasphereWithInterLOD)
set_target_properties (AXOctasphereWithInterLOD PROPERTIES FOLDER assignments)

add_subdirectory(./AXSimpleOctasphereWithBezierCurves)
set_target_properties (AXSimpleOctasphereWithBezierCurves PROPERTIES FOLDER assignments)

add_subdirectory(./AXSimpleAppleWithIntraLOD)
set_target_properties (AXSimpleAppleWithIntraLOD PROPERTIES FOLDER assignments)

add_subdirectory(./AXSimpleStrawberryWithIntraLOD)
set_target_properties (AXSimpleStrawberryWithIntraLOD PROPERTIES FOLDER assignments)