add_subdirectory(./AXUVSphereWithIntraLOD)
set_target_properties (AXUVSphereWithIntraLOD PROPERTIES FOLDER assignments)

add_subdirectory(./AXOctasphereWithIntraLOD)
set_target_properties (AXOctasphereWithIntraLOD PROPERTIES FOLDER assignments)

add_subdirectory(./AXTwoOctaspheres)
set_target_properties (AXTwoOctaspheres PROPERTIES FOLDER assignments)

add_subdirectory(./AXOctasphereWithInterLOD)
set_target_properties (AXOctasphereWithInterLOD PROPERTIES FOLDER assignments)

add_subdirectory(./AXFruitsGenerator)
set_target_properties (AXFruitsGenerator PROPERTIES FOLDER assignments)

add_subdirectory(./AXApplesRenderer)
set_target_properties (AXApplesRenderer PROPERTIES FOLDER assignments)

add_subdirectory(./AXStrawberriesRenderer)
set_target_properties (AXStrawberriesRenderer PROPERTIES FOLDER assignments)

add_subdirectory(./AXLemonsRenderer)
set_target_properties (AXLemonsRenderer PROPERTIES FOLDER assignments)

add_subdirectory(./AXPearsRenderer)
set_target_properties (AXPearsRenderer PROPERTIES FOLDER assignments)