add_subdirectory(./TXBasicFrameworkForModernGeometryPipeline)
set_target_properties (TXBasicFrameworkForModernGeometryPipeline PROPERTIES FOLDER tutorials)

add_subdirectory(./TXNaiveTriangleWithMeshShaderWithASingleThread)
set_target_properties (TXNaiveTriangleWithMeshShaderWithASingleThread PROPERTIES FOLDER tutorials)

add_subdirectory(./TXNaiveTriangleWithMeshShaderWithMultipleThreads)
set_target_properties (TXNaiveTriangleWithMeshShaderWithMultipleThreads PROPERTIES FOLDER tutorials)