add_subdirectory(./TXBasicFrameworkForModernGeometryPipeline)
set_target_properties (TXBasicFrameworkForModernGeometryPipeline PROPERTIES FOLDER tutorials)

add_subdirectory(./TXNaiveTriangleWithMeshShaderWithASingleThread)
set_target_properties (TXNaiveTriangleWithMeshShaderWithASingleThread PROPERTIES FOLDER tutorials)

add_subdirectory(./TXNaiveTriangleWithMeshShaderWithMultipleThreads)
set_target_properties (TXNaiveTriangleWithMeshShaderWithMultipleThreads PROPERTIES FOLDER tutorials)

add_subdirectory(./TXNaiveEllipseWithMeshShaderWithMultipleThreads)
set_target_properties (TXNaiveEllipseWithMeshShaderWithMultipleThreads PROPERTIES FOLDER tutorials)

add_subdirectory(./TXNaiveSphereWithMeshShaderWithMultipleThreads)
set_target_properties (TXNaiveSphereWithMeshShaderWithMultipleThreads PROPERTIES FOLDER tutorials)
