add_subdirectory(./TXBasicFrameworkForModernGeometryPipeline)
set_target_properties (TXBasicFrameworkForModernGeometryPipeline PROPERTIES FOLDER tutorials)

add_subdirectory(./TXTriangleSingleThreaded)
set_target_properties (TXTriangleSingleThreaded PROPERTIES FOLDER tutorials)

add_subdirectory(./TXTriangleMultiThreaded)
set_target_properties (TXTriangleMultiThreaded PROPERTIES FOLDER tutorials)

add_subdirectory(./TXEllipseMultiThreaded)
set_target_properties (TXEllipseMultiThreaded PROPERTIES FOLDER tutorials)

add_subdirectory(./TXSphereMultiThreaded)
set_target_properties (TXSphereMultiThreaded PROPERTIES FOLDER tutorials)

add_subdirectory(./TXOctahedronMultiThreaded)
set_target_properties (TXOctahedronMultiThreaded PROPERTIES FOLDER tutorials)

add_subdirectory(./TXSubdividedOctahedronMultiThreaded)
set_target_properties (TXSubdividedOctahedronMultiThreaded PROPERTIES FOLDER tutorials)

add_subdirectory(./TXRectangleMultiThreaded)
set_target_properties (TXRectangleMultiThreaded PROPERTIES FOLDER tutorials)

add_subdirectory(./TXTwoTrianglesMultiThreaded)
set_target_properties (TXTwoTrianglesMultiThreaded PROPERTIES FOLDER tutorials)